Add profile image upload

--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -44,6 +44,7 @@
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html" class="active"><i class="fas fa-dumbbell"></i> Workouts</a>
         <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
+        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <!-- Main Content -->
