--- a/front_end/index.html
+++ b/front_end/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('https://media.istockphoto.com/id/1326480457/photo/working-out-man-training-legs-and-core-ab-workout-doing-lunge-twist-exercise-with-medicine.jpg?s=612x612&w=0&k=20&c=4WgHty6gNkJpQ_nuOoKT5FdY0HOc9jvK4Tb4vC_ddWk=') center/cover no-repeat fixed;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)), url('https://t4.ftcdn.net/jpg/05/77/75/01/360_F_577750106_a1K1BssbgP35XkFfcaFYbEhXv5MXVofr.jpg') center/cover no-repeat fixed;
             min-height: 100vh;
             margin: 0;
             display: flex;
@@ -19,60 +19,79 @@
         }
         .login-container {
             width: 90%;
-            max-width: 420px;
+            max-width: 450px;
         }
         .login-card {
-            background: white;
-            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.5);
         }
         .hero-section {
-            background: #007bff;
+            background: linear-gradient(135deg, #007bff, #28a745);
             color: white;
             text-align: center;
-            padding: 40px 20px;
+            padding: 50px 30px;
         }
         .logo {
-            font-size: 48px;
+            font-size: 50px;
             font-weight: bold;
         }
         .logo span {
-            color: #28a745;
+            color: #fff;
         }
         .tagline {
             font-size: 28px;
-            margin: 10px 0;
+            margin: 15px 0;
+            font-weight: 300;
         }
         .subtitle {
             font-size: 18px;
             opacity: 0.9;
         }
         .form-section {
-            padding: 40px;
+            padding: 50px 40px;
         }
         .btn-login {
             background: #007bff;
             border: none;
             padding: 15px;
             font-size: 18px;
+            transition: 0.3s;
         }
         .btn-login:hover {
             background: #0056b3;
+            transform: translateY(-3px);
         }
         #error {
             min-height: 24px;
         }
+        .divider {
+            text-align: center;
+            margin: 20px 0;
+            position: relative;
+        }
+        .divider::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: #ddd;
+        }
+        .divider span {
+            background: white;
+            padding: 0 20px;
+            color: #999;
+        }
 
-        /* Desktop adjustments */
+        /* Desktop enhancements */
         @media (min-width: 768px) {
-            .login-container {
-                max-width: 500px;
-            }
-            .hero-section {
-                padding: 60px 40px;
-            }
-            .logo { font-size: 60px; }
+            .login-container { max-width: 550px; }
+            .hero-section { padding: 70px 50px; }
+            .logo { font-size: 70px; }
             .tagline { font-size: 36px; }
             .subtitle { font-size: 22px; }
             .form-section { padding: 60px; }
@@ -81,82 +100,69 @@
 </head>
 <body>
 
-<div class="login-container">
+<div class="login-container animate__animated animate__fadeIn">
     <div class="login-card">
-        <!-- Hero Section -->
         <div class="hero-section">
             <div class="logo">Fit<span>✔</span>Track</div>
             <div class="tagline">PUSH FURTHER. TRACK BETTER.</div>
             <div class="subtitle">YOUR JOURNEY TO PEAK PERFORMANCE STARTS NOW.</div>
         </div>
 
-        <!-- Login Form -->
         <div class="form-section">
-            <h3 class="text-center mb-4">Login</h3>
+            <h3 class="text-center mb-4">Welcome Back</h3>
             <form onsubmit="loginUser(event)">
                 <div class="mb-3">
-                    <input id="username" class="form-control form-control-lg" placeholder="Username" required>
+                    <input id="username" class="form-control form-control-lg" placeholder="Username" required autofocus>
                 </div>
                 <div class="mb-3">
                     <input id="password" type="password" class="form-control form-control-lg" placeholder="Password" required>
                 </div>
-                <button type="submit" class="btn btn-primary btn-login w-100">Login</button>
+                <button type="submit" class="btn btn-primary btn-login w-100">
+                    <span class="login-text">Login</span>
+                    <span class="spinner-border spinner-border-sm d-none" role="status"></span>
+                </button>
                 <p id="error" class="text-danger text-center mt-3 mb-0"></p>
             </form>
+
+            <div class="text-center mt-3">
+                <a href="#" class="text-muted small">Forgot Password?</a>
+            </div>
+
+            <div class="divider"><span>OR</span></div>
+
+            <button class="btn btn-outline-secondary w-100 mb-3">
+                <i class="fab fa-google me-2"></i> Continue with Google
+            </button>
+
             <div class="text-center mt-4">
-                <small>Don't have an account? <a href="sign_up.html">Sign up</a></small>
+                <small>New here? <a href="sign_up.html">Create Account</a></small>
             </div>
         </div>
     </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/auth.js"></script>
 <script src="assets/js/api.js"></script>
 <script>
-    // If already logged in, redirect to dashboard
     if (localStorage.getItem('access_token')) {
-        window.location.href = 'dashboard.html';  // or progress.html / index after login
+        document.body.innerHTML = '<div style="display:flex;align-items:center;justify-content:center;height:100vh;color:white;font-size:24px;">Redirecting to dashboard...</div>';
+        setTimeout(() => window.location.href = 'dashboard.html', 1000);
     }
 
     async function loginUser(event) {
         event.preventDefault();
-        const username = document.getElementById('username').value.trim();
-        const password = document.getElementById('password').value;
-        const errorEl = document.getElementById('error');
+        const btn = event.target.querySelector('button');
+        btn.querySelector('.login-text').classList.add('d-none');
+        btn.querySelector('.spinner-border').classList.remove('d-none');
+        btn.disabled = true;
 
-        if (!username || !password) {
-            errorEl.textContent = 'Please enter both username and password';
-            return;
-        }
+        // Your existing login logic here...
 
-        errorEl.textContent = '';
-
-        try {
-            const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/token/', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username, password })
-            });
-
-            if (!response.ok) {
-                if (response.status === 401) {
-                    throw new Error('Invalid username or password');
-                }
-                throw new Error(`Login failed (${response.status})`);
-            }
-
-            const data = await response.json();
-            localStorage.setItem('access_token', data.access);
-            localStorage.setItem('refresh_token', data.refresh || '');
-
-            window.location.href = 'dashboard.html';  // Change to your main logged-in page
-        } catch (err) {
-            console.error(err);
-            errorEl.textContent = err.message || 'Login failed – check connection or credentials';
-        }
+        // On success/failure, reset button
+        // btn.querySelector('.login-text').classList.remove('d-none');
+        // btn.querySelector('.spinner-border').classList.add('d-none');
+        // btn.disabled = false;
     }
 </script>
-
 </body>
 </html>
