--- a/front_end/training_plan.html
+++ b/front_end/training_plan.html
@@ -45,6 +45,7 @@
         <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
         <a href="training_plan.html" class="active"><i class="fas fa-calendar-alt"></i> Training Plan</a>
         <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
+        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <!-- Main Content -->
